--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-loader": "^5.3.1",
     "jade": "^1.11.0",
     "riot": "^2.2.1",
+    "riotcontrol": "0.0.1",
     "riotjs-loader": "^1.1.3",
     "webpack": "^1.10.1",
     "webpack-dev-server": "^1.10.1"
