--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "dependencies": {
     "babel-core": "^5.6.15",
     "babel-loader": "^5.3.1",
+    "commonmark": "^0.20.0",
     "jade": "^1.11.0",
+    "markdown-it": "^4.3.0",
+    "marked": "^0.3.3",
     "riot": "^2.2.1",
     "riotcontrol": "0.0.1",
+    "riotgear-markdown": "^1.0.3",
     "riotjs-loader": "^1.1.3",
     "webpack": "^1.10.1",
     "webpack-dev-server": "^1.10.1"
